--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,5 @@ redis>=5.0,<5.1
 daphne>=4.0,<4.1
 python-dotenv>=1.0,<1.1
 drf-spectacular>=0.27,<0.28
+whitenoise>=6.6,<7.0
+dj-database-url>=2.1,<3.0
